--- a/SuperCool/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SuperCool/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,8 +109,8 @@ CurrentPosGridSize=0
 CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/FPS_Weapon_Bundle/Maps/Weapons_Showcase
-MRUItem1=/Game/Level/Level1
+MRUItem0=/Game/Level/Level1
+MRUItem1=/Game/FPS_Weapon_Bundle/Maps/Weapons_Showcase
 MRUItem2=/Game/VirtualRealityBP/Maps/MotionControllerMap
 MRUItem3=/Game/VirtualRealityBP/Maps/MotionControllerMap02
 MRUItem4=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
@@ -138,7 +138,7 @@ AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewM
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraFollowMode=None,CameraFollowBoneName=""))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab3.SourcesExpanded=True
@@ -202,10 +202,11 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FPS_Weapon_Bundle/Maps/Weapons_Showcase
+LastLevel=/Game/Level/Level1
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn.MotionControllerPawn
 
 [DetailCategories]
 GameplayTagsSettings.GameplayTags=True
@@ -1232,23 +1233,23 @@ PlayerState.Replication=True
 PlayerState.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Bullet
-MRUItem1=/Game/Blueprints/BP_pickAK47
-MRUItem2=/Game/FPS_Weapon_Bundle/Weapons/Materials/RDS/M_RDS_01
-MRUItem3=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade/SK_G67_X_Physics
-MRUItem4=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade/SK_G67
-MRUItem5=/Game/FPS_Weapon_Bundle/Maps/Weapons_Showcase
-MRUItem6=/Game/VirtualRealityBP/Blueprints/Interactable
-MRUItem7=/Game/VirtualRealityBP/Blueprints/GripEnum
-MRUItem8=/Game/VirtualRealityBP/Blueprints/BP_PickupCube
-MRUItem9=/Game/Weapon/handgrip
-MRUItem10=/Game/Level/Level1
-MRUItem11=/Game/Weapon/BP_Bullet
-MRUItem12=/Game/Weapon/PS_Trail_Ribbon
-MRUItem13=/Game/Level/M_World
-MRUItem14=/Game/Level/Level1Assets_RightWall
-MRUItem15=/Game/VirtualRealityBP/Maps/MotionControllerMap
-MRUItem16=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn
+MRUItem0=/Game/VirtualRealityBP/Blueprints/MotionControllerPawn
+MRUItem1=/Game/Level/Level1
+MRUItem2=/Game/Blueprints/BP_Bullet
+MRUItem3=/Game/Blueprints/BP_pickAK47
+MRUItem4=/Game/FPS_Weapon_Bundle/Weapons/Materials/RDS/M_RDS_01
+MRUItem5=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade/SK_G67_X_Physics
+MRUItem6=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade/SK_G67
+MRUItem7=/Game/FPS_Weapon_Bundle/Maps/Weapons_Showcase
+MRUItem8=/Game/VirtualRealityBP/Blueprints/Interactable
+MRUItem9=/Game/VirtualRealityBP/Blueprints/GripEnum
+MRUItem10=/Game/VirtualRealityBP/Blueprints/BP_PickupCube
+MRUItem11=/Game/Weapon/handgrip
+MRUItem12=/Game/Weapon/BP_Bullet
+MRUItem13=/Game/Weapon/PS_Trail_Ribbon
+MRUItem14=/Game/Level/M_World
+MRUItem15=/Game/Level/Level1Assets_RightWall
+MRUItem16=/Game/VirtualRealityBP/Maps/MotionControllerMap
 MRUItem17=/Game/VirtualRealityBP/Maps/MotionControllerMap02
 MRUItem18=/Game/VirtualRealityBP/Maps/HMDLocomotionMap
 MRUItem19=/Game/Level/Portal
@@ -1455,7 +1456,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Lecture/Unreal/inno4/SuperCool/Content/FPS_Weapon_Bundle/Maps
+UNR=D:/Lecture/Unreal/inno4/SuperCool/Content/Level
 BRUSH=../../../../lklkl/Content/
 FBX=../../../../lklkl/Content/
 FBXAnim=../../../../lklkl/Content/
